# coutil

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.win  README.md
.github/ISSUE_TEMPLATE/: bug.yaml  feat.yaml
demo/: README.md  console.lua  fileinfo.lua  luasocket.lua  promise.lua  spawn.lua  stateco.lua  sysinfo.lua
demo/idle/: configs.lua  copas.lua  coutil.lua  luv.lua  luvcoro.lua
demo/multiecho/: main.lua  worker.lua
demo/randhist/: parallel.lua  singlethread.lua  worker.lua
demo/remoteexec/: client.lua  client_cb.lua  server.lua  server_cb.lua  utils.lua
demo/tcp/: configs.lua
demo/tcp/upload/: copas.lua  coutil.lua  luv.lua
doc/: changelog.md  contributing.md  devnotes.md  install.md  maketoc.lua  manual.md
etc/: Makefile.win  coutil-scm-1.rockspec
lua/coutil/: event.lua  promise.lua  queued.lua  socket.lua  spawn.lua  time.lua  verbose.lua
lua/coutil/socket/: event.lua  ssl.lua  wrap.lua
rockspec/: coutil-scm-1.rockspec
src/: Makefile  lchannelm.c  lchannem.c  lchaux.c  lchaux.h  lchdefs.h  lcommunf.c  lcoroutf.c  lcoroutm.c  lcuconf.h  lfilef.c  lhndlaux.c  lhndlaux.h  linfof.c  lmodaux.c  lmodaux.h  lnetadrf.c  lnetwaux.c  lnetwaux.h  lnetwrkf.c  looplib.c  looplib.h  loperaux.c  loperaux.h  lpipef.c  lprocaux.c  lprocaux.h  lprocesf.c  lscheduf.c  lscheduv.c  lschemod.c  lsckdefs.h  lsignalf.c  lsocketf.c  lstdiof.c  lsysinfm.c  lsyslib.c  lsyslib.h  lsysmod.c  lsystemm.c  (+9 more)
test/: coroutine.lua  event.lua  file.lua  info.lua  ltestm.c  mutex.lua  netaddr.lua  network.lua  operation.lua  pipe.lua  process.lua  promise.lua  queued.lua  scheduler.lua  signal.lua  spawn.lua  stdio.lua  stream.lua  system.lua  tcp.lua  testall.lua  thread.lua  time.lua  utils.lua
(+9 files in other folders)
